[package]
name = "axt"
description = "Example usage of the axos derivation pipeline."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/axos"
homepage = "https://github.com/refcell/axos"

[dependencies]
# The axt binary uses the standard library for argument parsing with [clap].
clap = { version = "4.4", features = ["derive"] }
anyhow = { version = "1.0" }
# loss = { path = "../../crates/loss" }
axos = { path = "../../crates/axos" }
axos-primitives = { path = "../../crates/primitives" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["alloc", "env-filter", "json"] }
