[package]
name = "axos"
description = "An optionally colored, non-std derivation pipeline"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/axos"
homepage = "https://github.com/refcell/axos"
exclude = ["benches", "tests"]

[features]
default = [ "serloc", "hex-compat", "axos-primitives/default" ]
serloc = [ "alloc", "serde", "serde_json", "serde/alloc", "serde_json/alloc" ]
alloc = [ "tracing-subscriber/alloc" ]
serde = [ "dep:serde", "axos-primitives/serde" ]
serde_json = [ "dep:serde_json" ]
hex-compat = [ "axos-primitives/hex-compat" ]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "tracing-log", "smallvec", "json"] }
axos-primitives = { path = "../primitives", version = "0.1.0" }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = [] }
