[package]
name = "axos-primitives"
description = "Primitives for the axos derivation pipeline."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/axos"
homepage = "https://github.com/refcell/axos"
exclude = ["benches", "tests"]

[features]
default = ["serloc", "hex-compat"]
serloc = ["alloc", "serde", "serde_json", "serde/alloc", "serde_json/alloc"]
alloc = []
std = ["alloc", "alloy-primitives/std"]
serde = ["dep:serde", "alloy-primitives/serde"]
serde_json = ["dep:serde_json"]
hex-compat = ["alloy-primitives/hex-compat"]
test-utils = []

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = [] }
alloy-primitives = { version = "0.4.2", default-features = false, features = [] }
